--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,48 @@
 h1 {
-  color: #cc0000;
+  color: #922e79;
   font-size: 40px;
+  margin-top: 30px;
+}
+
+h3 {
+  color: #06142d;
+  font-size: 30px;
+}
+
+img.left {
+  float: left;
+  margin-right: 20px;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .output-box {
   display: none;
+  margin-top: 50px;
+}
+
+body {
+  background-color: #eae4e4;
+}
+
+.btn {
+  background-color: #922e79;
+  border-color: #310e56;
+  border-width: medium;
+  border-style: groove;
+  margin-top: 20px;
+  color: #eae4e4;
+}
+
+.response {
+  font-size: 35px;
+  color: #922e79;
+  font-weight: bold;
+  margin-top: 40px;
   text-align: center;
+}
+
+.prompt {
+  font-size: 20px;
+  color: #310e56;
 }
